# Pyra

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ICON_UPDATE_GUIDE.md  LICENSE  NOTICE  README.md  README_ZH.md  clear-icon-cache.bat  fix-uninstaller-icon.cjs  force_icon_refresh.ps1  index.html  package-lock.json  package.json  ruff_current_snapshot.txt  tailwind.config.js  vite.config.ts  图标显示问题解决方案.md
.claude/: claude.md  settings.local.json
docs/: README.md  SECURITY.md  USER_GUIDE.md  USER_GUIDE_EN.md
scripts/: check_env.ps1  install_python_uv.ps1
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: 2  Cargo.toml  build.rs  main.py  pyproject.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/scripts/: check_env.sh  install_python_uv.ps1  install_python_uv.sh
src-tauri/src/: file_manager.rs  main.rs  python_manager.rs
src-tauri/src/commands/: debug.rs  file.rs  mod.rs  project.rs  python.rs  ruff.rs  templates.rs
src-tauri/wix/locales/: en-US.wxl  zh-CN.wxl
src/components/: Console.tsx  DebugPanel.tsx  Editor.tsx  EditorSimplified.tsx  FileTree.tsx  PackageManager.tsx  ProjectPanel.tsx  ProjectTemplateDialog.tsx  PyProjectManager.tsx  SettingsPanel.tsx  StatusBar.tsx  TabsBar.tsx
src/lib/: tauri.ts
src/locales/en/: translation.json
src/themes/: catppuccin.ts  monaco-catppuccin-fixed.ts  monaco-catppuccin.ts  monaco-debug.ts  monaco-python-enhanced.ts
src/types/: index.ts
test-project/: README.md  debug_test.py  long_running.py  main.py  pyproject.toml  runtime_test.py  simple_test.py  syntax_test.py  test_ruff.py  theme_test.py
(+1 files in other folders)
