[package]
name = "pyra"
version = "0.1.0"
description = "A lightweight Python IDE built with Tauri"
authors = ["ericoding"]
license = "Apache-2.0"
repository = "https://github.com/sheacoding/Pyra"
homepage = "https://github.com/sheacoding/Pyra"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
toml = "0.8"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
